# fast-demo

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  example.env  pyproject.toml  wait-for-it.sh
.github/workflows/: docker-image.yml
app/: main.py
project/app/: config.py  main.py
tests/integration/test_web_app/: test_main.py
