[tool.poetry]
name = "fast-demo"
version = "0.2.1"
description = "a fast api restfull web service"
authors = ["Bogdan Veliscu <bogdan.veliscu@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "project"}]


[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.88.0"}
sqlmodel = "^0.0.8"
uvicorn = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
