[tool.poetry]
name = "fast-demo"
version = "0.1.2"
description = "a fast api restfull web service"
authors = ["Bogdan Veliscu <bogdan.veliscu@outlook.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.88.0"}
sqlmodel = "^0.0.8"
uvicorn = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"
bandit = "^1.7.4"
safety = "^2.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
